# taiwan_culture_event_info_django_bootstrap

./: .dockerignore  .gitignore  README.md  fly.toml  makefile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
deployment_tcei/: Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  ngrok.yml
main_project/: app_20250316.log.2025-03-16  manage.py  pytest.ini
main_project/concert/: urls.py  views.py
main_project/concert/templates/: concert.html
main_project/culture/: apps.py  data.py  middleware.py  tests.py  urls.py  views.py
main_project/culture/templates/: culture.html
main_project/health_check/: tests.py  urls.py  views.py
main_project/health_check/templates/: health_check.html
main_project/main_project/: settings.py  urls.py  views.py
main_project/main_project/templates/: 404.html  backup.html  base.html
main_project/static/assets/css/: material-dashboard.css
main_project/tech_stack/: apps.py  tests.py  urls.py  views.py
main_project/tech_stack/templates/: tech_stack.html
main_project/utility/: logger.py  resp_spec.py
utility/: __init__.py  logger.py  resp_spec.py
